--- a/src/components/ItemListContainer/ItemListContainer.scss
+++ b/src/components/ItemListContainer/ItemListContainer.scss
@@ -1,3 +1,33 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+  }
+
 .catalogo_contenedor{
     background-color: rgb(244, 232, 232)
+    
+}
+
+
+.margin{
+    
+    
+   
+  margin: 2px;
+  padding: 10px;
+    display: flex;
+    flex-wrap: nowrap;
+}
+.contenedor{
+    display: flex;
+   
+  
+    justify-content: center;
+    
+}
+.contenedor_card{
+    
+    background-color: red;
+    
 }
