--- a/src/components/ItemCard/ItemCard.scss
+++ b/src/components/ItemCard/ItemCard.scss
@@ -9,6 +9,9 @@
     padding: 10px;
       display: flex;
       flex-wrap: nowrap;
+
+ 
+
   }
 @media screen and (max-width: 734px) {
     .titulo_card {
@@ -21,5 +24,35 @@
         font-size: 14px;
         
     }
+    .botonprecio{
+      font-size: 16px;
+    }
+}
+@media screen and (max-width: 500px) {
+  .titulo_card {
+    
+    font-size: 16px;
+      height: 45px;
+  
+  }
+  .boton_agregar{
+      font-size: 12px;
+      
+  }
+  .botonprecio{
+    font-size: 12px;
+  }
 }
 
+@media screen and (max-width: 460px) {
+  .titulo_card {
+    
+    font-size: 14px;
+      height: 45px;
+  
+  }
+  .boton_agregar{
+      font-size: 10px;
+      
+  }
+}
