--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -53,3 +53,12 @@
         border-radius: 5%;
         margin: 5px;
       }
+
+      .menu_desplegable{
+        text-decoration: none;
+        background-color: rgb(13, 13, 75);
+        padding: 10px;
+        color: white;
+        border-radius: 5%;
+        margin: 5px;
+      }
