--- a/src/components/ItemListContainer/ItemListContainer.scss
+++ b/src/components/ItemListContainer/ItemListContainer.scss
@@ -4,24 +4,13 @@
     box-sizing: border-box;
   }
 
-.catalogo_contenedor{
-    background-color: rgb(244, 239, 239)
-}
 
-.margin{
-  margin: 2px;
-  padding: 10px;
-    display: flex;
-    flex-wrap: nowrap;
-}
-.contenedor{
-    display: flex;
-    justify-content: center;
-}
 
-.contenedor_card{
-    background-color: red;
-}
-.titulo_card{
-    font-size: 20px;
-}
+
+// .contenedor_card{
+//     background-color: red;
+// }
+// .titulo_card{
+//     font-size: 20px;
+// }
+
