--- a/src/components/CarouselInicio/CarouselInicio.scss
+++ b/src/components/CarouselInicio/CarouselInicio.scss
@@ -11,8 +11,19 @@
     justify-content: center;
   }
   .contenedor_Carousel2{
-    width: 70%;
-   
-   
+    width: 60%;
+    margin: 20px;
+
+  }
+  .contenedorTitulo{
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(172, 171, 171);
+    height: 100px;
+  }
+  .tituloPrincipal{
+    align-items: center;
     
   }
