--- a/src/components/ItemDetail/ItemDetail.scss
+++ b/src/components/ItemDetail/ItemDetail.scss
@@ -7,6 +7,8 @@
   .containerItem{
     justify-content: center;
     display: flex;
+    margin: 20px 20px 40px 20px;
+    
   }
 
   .titulo_cardItem{
