--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -20,17 +20,21 @@
       
     } 
     .colornav{
+      justify-content: flex-start;
+      width: 80%;
       
-      width: 90%;
-    }
-    .contenedor_logoCarrito{
       display: flex;
       flex-wrap: nowrap;
-      margin-right: 10px;
-      background-color: rgb(42, 42, 249);
-      color:rgb(91, 91, 91);
+      padding-left: 20px;;
+    }
+    // .contenedor_logoCarrito{
+    //   display: flex;
+    //   flex-wrap: nowrap;
+    //   margin-right: 10px;
+    //   background-color: rgb(42, 42, 249);
+    //   color:rgb(91, 91, 91);
       
-      }
+    //   }
     // .carritoSubtitulo{
     //     color: white;
     //     text-decoration: none;
@@ -50,22 +54,22 @@
 
       .cartWidget{
         justify-content: flex-end;
-       background-color: red;
+       
         align-items: center;
-        justify-content: center;
+        
         display: flex;
         flex-wrap: nowrap;
-        width: 10%;
+        width: 20%;
       }
 
-      .botonnav {
-        text-decoration: none;
-        background-color: rgb(13, 13, 75);
-        padding: 10px;
-        color: white;
-        border-radius: 5%;
-        margin: 5px;
-      }
+      // .botonnav {
+      //   text-decoration: none;
+      //   background-color: rgb(13, 13, 75);
+      //   padding: 10px;
+      //   color: white;
+      //   border-radius: 5%;
+      //   margin: 5px;
+      // }
 
       .menu_desplegable{
         text-decoration: none;
