eliminarproducto del carrito

--- a/src/components/CartWidget/CartWidget.scss
+++ b/src/components/CartWidget/CartWidget.scss
@@ -6,3 +6,8 @@
     align-items: center;
     justify-content: center;
 }
+
+ .colorCirculo{
+        background-color: red;
+        color: white;
+      }
