--- a/src/components/ItemListContainer/ItemListContainer.scss
+++ b/src/components/ItemListContainer/ItemListContainer.scss
@@ -4,13 +4,24 @@
     box-sizing: border-box;
   }
 
+  .contenedorTitulo{
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(172, 171, 171);
+    height: 100px;
+    width: 100%;
+  }
+  .tituloPrincipal{
+    align-items: center;
+    
+  }
+  .contenedor{
+    display: flex;
+    flex-wrap: wrap;
+  }
 
-
-
-// .contenedor_card{
-//     background-color: red;
-// }
-// .titulo_card{
-//     font-size: 20px;
-// }
-
+  .contenedorProductos{
+    width: 100%;
+  }
