--- a/src/components/CartView/CartView.scss
+++ b/src/components/CartView/CartView.scss
@@ -27,6 +27,17 @@
     flex-wrap: nowrap;
     align-items: center;
     justify-content: center;
+   
+    margin: 10px;
+    
+  }  
+  .total_Producto2{
+   
+    margin: 10px;
+    
+  }
+  .terminarCompra{
+  
     margin: 10px;
     
   }
@@ -36,4 +47,8 @@
     align-items: center;
     justify-content: center;
     margin: 10px;
+  }
+
+  .prueba{
+    background-color: blue;
   }
