--- a/src/components/ItemDetail/ItemDetail.scss
+++ b/src/components/ItemDetail/ItemDetail.scss
@@ -13,6 +13,9 @@
   .titulo_cardItem{
     margin: 20px;
   }
+  .marginDetail{
+    margin-bottom: 15px;
+  }
 
   .botonprecio_Item{
     font-size: 28px;
