--- a/src/components/ItemCard/ItemCard.scss
+++ b/src/components/ItemCard/ItemCard.scss
@@ -17,7 +17,15 @@
   }  
   .botonprecio{
     
-    height: 40px;
+    height: 25px;
+  }
+  .espacioUltimas{
+    
+    height: 25px;
+  }
+  .boton_agregar{
+    
+    height: 25px;
   }
 
 @media screen and (max-width: 734px) {
