--- a/src/components/CartView/CartView.scss
+++ b/src/components/CartView/CartView.scss
@@ -6,6 +6,7 @@
     background-color: rgb(172, 171, 171);
     height: 100px;
     margin-bottom: 25px;
+    width: 100%;
 }
 
   .tituloPrincipal{
@@ -36,9 +37,16 @@
     margin: 10px;
     
   }
+  .totalCompra{
+    background-color: rgb(180, 196, 196);
+    width: 70%;
+    font-size: 36px;
+    margin: 20px;
+  }
   .terminarCompra{
-  
+    background-color: gray;
     margin: 10px;
+    font-size: 20px;
     
   }
   .contenedorPrecioFinal{
@@ -47,8 +55,24 @@
     align-items: center;
     justify-content: center;
     margin: 10px;
+  
+   
   }
-
+  // .contenedor{
+  //   display: flex;
+  //   flex-wrap: nowrap;
+  //   align-items: center;
+  //   justify-content: center;
+   
+  // }
+  .contenedorPrecioFinal2{
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: center;
+    margin: 10px;
+    
+  }
   .prueba{
     background-color: blue;
   }
