--- a/src/components/Checkout/Checkout.scss
+++ b/src/components/Checkout/Checkout.scss
@@ -7,7 +7,12 @@
     justify-content: center;
   }
 
-
+  .datos{
+    margin-bottom: 20px;
+  }
+  .enviar{
+    margin: 20px;
+  }
   .contenedorContactoFotoyTexto{
     display: flex;
     flex-wrap: nowrap;
