--- a/src/components/ItemDetail/ItemDetail.scss
+++ b/src/components/ItemDetail/ItemDetail.scss
@@ -4,12 +4,17 @@
     box-sizing: border-box;
   }
   .irAlCarrito{
-    background-color: rgb(116, 177, 220);
+    background-color: rgb(148, 214, 220);
+    margin: 5px;
+    font-size: 18px;
   }
   .containerItem{
     justify-content: center;
     display: flex;
     margin: 20px 20px 40px 20px;
+  }
+  .datos{
+    margin: 20px;
   }
   .formato{
     justify-content: center;
