--- a/src/components/ItemList/ItemList.scss
+++ b/src/components/ItemList/ItemList.scss
@@ -5,9 +5,10 @@
   }
 
 .catalogo_contenedor{
-    background-color: rgb(244, 239, 239);
-    display: flex;
-    justify-content: center;
+    // background-color: rgb(244, 239, 239);
+  justify-content: center;
+  align-items: center;
+   
 }
 
 
