--- a/src/components/Order/Order.scss
+++ b/src/components/Order/Order.scss
@@ -3,17 +3,18 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-   
-
-
-
+    
 }
 
 .contenedorOrdenTexto{
      width: 70%;
     background-color: rgb(180, 196, 196);
     margin-top: 40px;
-
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    
 }
 
 .contenedorTituloOrden{
@@ -24,6 +25,7 @@
     align-items: center;
     padding: 30px;
     font-size: 40px;
+    
 }
 
 .contenedorNroOrden{
@@ -33,5 +35,33 @@
     justify-content: center;
     align-items: center;
     padding: 30px;
-    font-size: 30px;
+    font-size: 25px;
+    
+}
+.contenedorNroOrden2{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    padding: 30px;
+   
+}
+
+@media screen and (max-width: 616px) {
+   
+    .contenedorNroOrden{
+      
+      font-size: 26px;
+   
+    }  
+}
+
+@media screen and (max-width: 510px) {
+   
+    .contenedorNroOrden{
+      
+      font-size: 20px;
+     
+    }  
 }
